rename some files

--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -165,7 +165,7 @@ xcopy "$(OPENCV_DIR)\bin\opencv_videoio_ffmpeg452_64.dll" "$(SolutionDir)x64\Rel
   <ItemGroup>
     <ClCompile Include="cuda_utils.cpp" />
     <ClCompile Include="Utilities.cpp" />
-    <ClCompile Include="Watermark_GPU.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cimg_init.h" />
@@ -173,7 +173,7 @@ xcopy "$(OPENCV_DIR)\bin\opencv_videoio_ffmpeg452_64.dll" "$(SolutionDir)x64\Rel
     <ClInclude Include="kernels.cuh" />
     <ClInclude Include="Utilities.hpp" />
     <ClInclude Include="Watermark.cuh" />
-    <ClInclude Include="Watermark_GPU.hpp" />
+    <ClInclude Include="main_utils.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
