--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -7,7 +7,7 @@ video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_
 [options]
 opencl_device = 1
 save_watermarked_files_to_disk = false
-execution_time_in_fps = false
+execution_time_in_fps = true
 
 [parameters]
 p = 3
