reduce video parameters

--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -2,7 +2,6 @@
 image = samples/images/4k.png
 w_path = samples/w_4k.dat
 video = samples/videos/FourPeople_1280x720_30.yuv
-video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
 
 [options]
 save_watermarked_files_to_disk = false
@@ -19,9 +18,11 @@ display_frames = true
 watermark_make = true
 watermark_first_frame_only = false
 watermark_detection = true
-watermark_save_to_file = false
-watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked_first_frame_only.yuv
-watermark_detection_compressed = false
+; set "watermark_save_to_file_path" value to a video file path, in order to save the watermarked raw YUV file to disk
+;watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked.yuv
+; set "video_compressed value" to a video file that has been watermarked and compressed before
+; in order to try and detect the watermark
+;video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
 rows = 720
 cols = 1280
 frames = 301
