REVAMP VIDEO pt2: fixed non-aligned cases + refactor

--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,7 +1,7 @@
 [paths]
 image = samples/images/4k.png
-watermark = samples/w_4k.dat
-video = samples/videos/sample_4k.mp4
+watermark = samples/w_1078p.dat
+video = samples/videos/sample_1078p.mkv
 
 [options]
 save_watermarked_files_to_disk = false
@@ -15,10 +15,10 @@ loops_for_test = 1
 
 [parameters_video]
 ; set this value to encode/decode the watermark after X frames. This improves quality of the video and encoding speed
-watermark_interval = 30
+watermark_interval = 1
 ; set this value to a file path, in order to embed watermark and save the watermarked file to disk
-encode_watermark_file_path = samples/videos/sample_4k_watermarked.mp4
-; set ffmpeg options (codec, preset, crf etc)
+encode_watermark_file_path = samples/videos/sample_1078p_watermarked.mp4
+; set ffmpeg encode options (codec, preset, crf etc)
 encode_options = -c:v libx265 -preset fast -crf 23
-; set "watermark_detection value" to true, in order to try and detect the watermark of the video parameter
+; set to true, in order to try and detect the watermark of the video parameter
 watermark_detection = true
