--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,7 +1,7 @@
 [paths]
 image = samples/images/4k.png
-watermark = samples/w_1078p.dat
-video = samples/videos/sample_1078p.mkv
+watermark = samples/w_1080p.dat
+video = samples/videos/sample_1080p.mp4
 
 [options]
 save_watermarked_files_to_disk = false
@@ -15,10 +15,10 @@ loops_for_test = 1
 
 [parameters_video]
 ; set this value to encode/decode the watermark after X frames. This improves quality of the video and encoding speed
-watermark_interval = 1
+watermark_interval = 30
 ; set this value to a file path, in order to embed watermark and save the watermarked file to disk
-encode_watermark_file_path = samples/videos/sample_1078p_watermarked.mp4
+encode_watermark_file_path = samples/videos/sample_1080p_watermarked.mp4
 ; set ffmpeg encode options (codec, preset, crf etc)
 encode_options = -c:v libx265 -preset fast -crf 23
-; set to true, in order to try and detect the watermark of the video parameter
+; set to true in order to detect the watermark of the video parameter (works only if "encode_watermark_file_path" is not set, we either encode, or detect a watermark
 watermark_detection = true
