--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,7 +1,7 @@
 [paths]
 image = samples/images/4k.png
-w_path = samples/w_4k.dat
-video = samples/videos/FourPeople_1280x720_30.yuv
+watermark = samples/w_1080p.dat
+video = samples/videos/sample_1080p.mp4
 
 [options]
 opencl_device = 1
@@ -11,20 +11,15 @@ execution_time_in_fps = true
 [parameters]
 p = 3
 psnr = 40.0
+; set this value to benchmark image watermarking by simulating more GPU work (a value of at least 1000 produces consistent results)
 loops_for_test = 1
 
 [parameters_video]
-test_for_video = false
-display_frames = true
-watermark_make = true
-watermark_first_frame_only = false
+; set this value to encode/decode the watermark after X frames. This improves quality of the video and encoding speed
+watermark_interval = 30
+; set this value to a file path, in order to embed watermark and save the watermarked file to disk
+encode_watermark_file_path = samples/videos/sample_1080p_watermarked.mp4
+; set ffmpeg encode options (codec, preset, crf etc)
+encode_options = -c:v libx265 -preset fast -crf 23
+; set to true in order to detect the watermark of the video parameter (works only if "encode_watermark_file_path" is not set, we either encode, or detect a watermark
 watermark_detection = true
-; set "watermark_save_to_file_path" value to a video file path, in order to save the watermarked raw YUV file to disk
-;watermark_save_to_file_path = samples/videos/FourPeople_1280x720_30_watermarked.yuv
-; set "video_compressed value" to a video file that has been watermarked and compressed before
-; in order to try and detect the watermark
-;video_compressed = samples/videos/FourPeople_1280x720_30_compressed_watermarked_first_frame_only.avi
-rows = 720
-cols = 1280
-frames = 301
-fps = 30
