default mode: image testing (settings.ini)

--- a/Watermark_GPU/settings.ini
+++ b/Watermark_GPU/settings.ini
@@ -1,7 +1,7 @@
 [paths]
 image = samples/images/4k.png
-watermark = samples/w_1080p.dat
-video = samples/videos/sample_1080p.mp4
+watermark = samples/w_4k.dat
+; video = samples/videos/sample_1080p.mp4
 
 [options]
 opencl_device = 1
