--- a/Watermark_GPU/Watermark_GPU.vcxproj
+++ b/Watermark_GPU/Watermark_GPU.vcxproj
@@ -161,11 +161,13 @@ xcopy "$(ProjectDir)libs\ffmpeg\bin\ffmpeg.exe" "$(OutDir)" /y /D</Command>
     <ClCompile Include="cuda_utils.cpp" />
     <ClCompile Include="Utilities.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="videoprocessingcontext.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cuda_utils.hpp" />
     <ClInclude Include="kernels.cuh" />
     <ClInclude Include="Utilities.hpp" />
+    <ClInclude Include="videoprocessingcontext.hpp" />
     <ClInclude Include="Watermark.cuh" />
     <ClInclude Include="main_utils.hpp" />
   </ItemGroup>
